# HDU-Phoenix-Visual-Group-Task

./: .gitignore  README.md
DL/fashionMNIST/: CNN.py  DataLoader.py  main.py  tester.py  trainer.py
DL/mnist/: DataLoader.py  Net.py  main.py  tester.py  trainer.py
DL/mnist/model/: mnist_net.pth  mnist_optimizer.pth
DL/终极考察/: 修改.txt
DL/终极考察/Datasets/: classes.txt
DL/终极考察/Datasets/test/: labels.cache
DL/终极考察/Datasets/test/labels/: IMG_2759.txt  IMG_2761.txt  IMG_2762.txt  IMG_2763.txt
DL/终极考察/Datasets/train/: labels.cache
DL/终极考察/Datasets/train/labels/: IMG_2738.txt  IMG_2739.txt  IMG_2740.txt  IMG_2741.txt  IMG_2742.txt  IMG_2743.txt  IMG_2744.txt  IMG_2745.txt  IMG_2746.txt  IMG_2747.txt  IMG_2748.txt  IMG_2749.txt  IMG_2750.txt  IMG_2751.txt  IMG_2752.txt  IMG_2753.txt  IMG_2755.txt  (+3 more)
DL/终极考察/yolov5/: train.py  val.py
DL/终极考察/yolov5/data/: soda.yaml
OpenCV/1.单像素处理/: CMakeLists.txt  main.cpp
OpenCV/10.coin/: CMakeLists.txt  main.cpp
OpenCV/11.autocount/: CMakeLists.txt  main.cpp
OpenCV/12.camerafilter/: CMakeLists.txt  main.cpp
OpenCV/13.Canny/: CMakeLists.txt  main.cpp
OpenCV/14.修图/: CMakeLists.txt  main.cpp
OpenCV/2.threshold/: CMakeLists.txt  main.cpp
OpenCV/3.deep(shallow)Mat/: CMakeLists.txt  main.cpp
OpenCV/4.channelsplit/: CMakeLists.txt  main.cpp
OpenCV/5.camera/: CMakeLists.txt  main.cpp
OpenCV/6.draw/: CMakeLists.txt  main.cpp
OpenCV/7.gammacorrection/: CMakeLists.txt  main.cpp
OpenCV/8.hsvMat/: CMakeLists.txt  main.cpp
OpenCV/⑨.图像形态学/: CMakeLists.txt  main.cpp
OpenCV/终极考察/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
